# hubmq

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE-HUBMQ.md  Cargo.toml  DEPENDENCIES.md  README.md
.forgejo/workflows/: ci.yml  deploy.yml
crates/hubmq-bin/: Cargo.toml
crates/hubmq-bin/src/: main.rs
crates/hubmq-core/: Cargo.toml
crates/hubmq-core/migrations/: 001_init.sql
crates/hubmq-core/src/: admin.rs  app_state.rs  audit.rs  bridge.rs  config.rs  dispatcher.rs  lib.rs  message.rs  nats_conn.rs  queue.rs  subjects.rs
crates/hubmq-core/src/filter/: dedup.rs  mod.rs  ratelimit.rs  severity.rs
crates/hubmq-core/src/listener/: llm_openai.rs  mod.rs
crates/hubmq-core/src/sink/: apprise.rs  email.rs  email_reply.rs  mod.rs  ntfy.rs
crates/hubmq-core/src/source/: email.rs  mod.rs  telegram.rs  webhook.rs
deploy/: README-nkeys.md  config.toml.example  deploy-hubmq.sh  hubmq-fallback-p0.service  hubmq-fallback-p0.sh  hubmq-heartbeat.service  hubmq-heartbeat.timer  hubmq.service  nats-server.conf.template  nats.service
deploy/agent/: CLAUDE-HUBMQ-AGENT.md  README.md  hubmq-agent-listener.service  hubmq-agent-listener.sh  hubmq-agent-spawn.sh  send-telegram.sh  settings.json
deploy/bigbrother-agent/: README.md  bigbrother-analyze.service  bigbrother-analyze.timer  bigbrother-watchdog.service  bigbrother-watchdog.timer
deploy/bigbrother-agent/workspace/: CLAUDE.md
deploy/bigbrother-agent/workspace/.claude/: settings.json
deploy/bigbrother-agent/wrapper/: bigbrother-analyze.sh  bigbrother-watchdog.sh
deploy/conf.d/: agents.toml  bots.toml
docs/: ARCHITECTURE.md  OPERATIONS.md  PLAN-NEXT-STEPS.md  SETUP.md  SUBJECTS.md
docs/plans/: 2026-04-12-hubmq-phase-core.md
tests/integration/: e2e.sh
