[workspace]
resolver = "2"
members = ["crates/hubmq-core", "crates/hubmq-bin"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Stéphane motreffs <mymomot74@gmail.com>"]
license = "Apache-2.0"
repository = "http://localhost:3000/motreffs/hubmq"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
async-nats = "0.38"
teloxide = { version = "0.13", features = ["macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tera = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
async-trait = "0.1"
futures-util = "0.3"
