[package]
name = "hubmq"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "hubmq"
path = "src/main.rs"

[dependencies]
hubmq-core = { path = "../hubmq-core" }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
