[package]
name = "hubmq-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
async-nats.workspace = true
teloxide.workspace = true
sqlx.workspace = true
lettre.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tera.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
async-trait.workspace = true
futures-util.workspace = true
glob.workspace = true
nix.workspace = true
imap.workspace = true
native-tls.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
